WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
209765
REGRESSION (
r256756
): -[WKPreferenceObserver init]: Instance variable used while 'self' is not set to the result of '[(super or self) init...]'
https://bugs.webkit.org/show_bug.cgi?id=209765
Summary
REGRESSION (r256756): -[WKPreferenceObserver init]: Instance variable used wh...
David Kilzer (:ddkilzer)
Reported
2020-03-30 13:53:08 PDT
-[WKPreferenceObserver init]: Instance variable used while 'self' is not set to the result of '[(super or self) init...]'. - (instancetype)init { [...] for (auto domain : domains) { [...] m_userDefaults.append(userDefaults); } return [super init]; }
Attachments
Patch v1
(1.83 KB, patch)
2020-03-30 13:55 PDT
,
David Kilzer (:ddkilzer)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
David Kilzer (:ddkilzer)
Comment 1
2020-03-30 13:55:49 PDT
Created
attachment 394958
[details]
Patch v1
EWS
Comment 2
2020-03-30 15:41:39 PDT
Committed
r259239
: <
https://trac.webkit.org/changeset/259239
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 394958
[details]
.
Radar WebKit Bug Importer
Comment 3
2020-03-30 15:42:15 PDT
<
rdar://problem/61077050
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug