REGRESSION (r256756): -[WKPreferenceObserver init]: Instance variable used while 'self' is not set to the result of '[(super or self) init...]' <https://webkit.org/b/209765>

Reviewed by Darin Adler.

* UIProcess/Cocoa/PreferenceObserver.mm:
(-[WKPreferenceObserver init]): Call `[self init]` and set
`self` to fix the clang static analyzer warning.


Canonical link: https://commits.webkit.org/222695@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@259239 268f45cc-cd09-0410-ab3c-d52691b4dbfc